[package]
name = "bevy_toon"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A toon shading plugin for Bevy."
readme = "README.md"
homepage = "https://github.com/LaoLittle/bevy_toon/"
repository = "https://github.com/LaoLittle/bevy_toon/"
keywords = ["bevy", "toon"]

[dependencies]
bevy.workspace = true

[dependencies.bevy_toon_outline]
path = "../bevy_toon_outline"
