[package]
name = "bevy_toon_outline"
version = "0.6.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A mesh outlining plugin for Bevy."
readme = "README.md"
homepage = "https://github.com/komadori/bevy_mod_outline/"
repository = "https://github.com/komadori/bevy_mod_outline/"
keywords = ["gamedev", "bevy", "outline"]
categories = ["game-engines", "rendering"]

[dependencies]
bevy.workspace = true
bitfield.workspace = true
interpolation.workspace = true
thiserror.workspace = true

[features]
default = ["bevy_ui"]
bevy_ui = ["bevy/bevy_ui", "bevy/bevy_sprite", "bevy/bevy_text"]